# cloud-realtime-transcription

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  lambdacloud-setup.sh  run-client.sh  run-server-prod.sh  run-server.sh
client/: README.md  pyproject.toml
client/src/: audio_utils.py  main.py
display/: index.html  package.json  pnpm-lock.yaml  server.js
server/: entrypoint.sh  pyproject.toml
server/src/: main.py
