[project]
name = "transcriptions-client"
version = "1"
description = ""
authors = [
    {name = "Marco Acierno",email = "marcoaciernoemail@gmail.com"},
]
dependencies = [
    "numpy>=1.26.3",
    "PyAudio>=0.2.14",
    "SpeechRecognition>=3.10.1",
    "transformers[torch]>=4.36.2",
    "httpx==0.28.1",
    "starlette==0.45.1",
    "uvicorn==0.34.0",
    "sse-starlette==2.2.1",
    "sounddevice>=0.5.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

