[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Marco Acierno",email = "marcoaciernoemail@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "numpy>=1.26.3",
    "transformers[torch]>=4.36.2",
    "ninja>=1.11.1.1",
    "flash-attn>=2.4.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

