[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Marco Acierno",email = "marcoaciernoemail@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "numpy>=1.26.3",
    "ninja>=1.11.1.1",
    "packaging>=23.2",
    "torch>=2.1.2",
    "accelerate>=0.26.1",
    "transformers[torch]>=4.36.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

